fix: hero image align.

--- a/projects/faq-accordion-card-main/index.css
+++ b/projects/faq-accordion-card-main/index.css
@@ -23,6 +23,10 @@ body {
   background-attachment: fixed;
 }
 
+/* ========================================================================== */
+/* MOBILE */
+/* ========================================================================== */
+
 .card {
   display: flex;
   position: relative;
@@ -47,13 +51,13 @@ body {
 
 .card__hero img {
   position: absolute;
-  right: 50%;
+  right: 54%;
   transform: translateX(50%);
 }
 
 .card__hero .platform {
   top: 0;
-  right: 47%;
+  right: 50%;
 }
 
 .card__hero > img + img {
@@ -121,6 +125,14 @@ body {
 .desktop-only {
   display: none !important;
 }
+
+/* ========================================================================== */
+/* DESKTOP */
+/* ========================================================================== */
+
+/* ========================================================================== */
+/* TABLET and DESKTOP*/
+/* ========================================================================== */
 
 @media screen and (min-width: 780px) and (max-height: 1440px) {
   .card {
